<resources>
    <string name="app_name">Mobile Absensi</string>
    <string name="username">Anak Sultan</string>
    <string name="nip">10101010101010</string>
    <string name="email">E-mail: sultan@unsyiah.ac.id</string>
    <string name="failedConnect">Failed to Connect</string>
    <string name="ok">Yes</string>
    <string name="text_location_permission">turn on your device location?</string>
    <string name="title_location_permission">Allow Device Location</string>
    <string name="no_courses">No Courses</string>
    <string name="logOut">Log Out</string>
    <string name="employee_id">Employee ID</string>
    <string name="password">Password</string>
    <string name="next">Next</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="drawer_dashboard">Dashboard</string>
    <string name="drawer_matkul">Mata Kuliah</string>
    <string name="drawer_about">About</string>
    <string name="drawer_logout">Logout</string>
    <string name="title_activity_sample_drawer">SampleDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main_drawer">MainActivityDrawer</string>
</resources>
